Fixed quotes in trans string

--- a/trunk/diamandas/wiki/templates/wiki/users.html
+++ b/trunk/diamandas/wiki/templates/wiki/users.html
@@ -49,7 +49,7 @@
 	{% if current %}
 		{% trans "- Your edits will be displayed without delay" %}<br>
 	{% else %}
-		{% trans "- Your edits will be marked as "Edit Proposals" and won't appear on the wiki until the site staff won't review your changes." %}<br>
+		{% trans "- Your edits will be marked as Edit Proposals and won't appear on the wiki until the site staff won't review your changes." %}<br>
 	{% endif %}
 	<br>
 	<center><input type="button" value="{% trans "Log Out" %}" onclick="location.assign('/wiki/user/?log=out');"></center>
