--- a/trunk/diamandas/wiki/templates/wiki/search.html
+++ b/trunk/diamandas/wiki/templates/wiki/search.html
@@ -3,10 +3,22 @@
 {% block upmenu %}<input type="button" value="{% trans "Main Page" %}" onclick="location.assign('/');">{% endblock %}
 {% block downmenu %}<input type="button" value="{% trans "Main Page" %}" onclick="location.assign('/');">{% endblock %}
 {% block content %}
-<div class="downmenu"><form method="post" action="."><input type="text" value="{{ string }}" name="string" size="20"> <input type="submit" value="{% trans "Search" %}"></form></div>
-	{% if pages %}
-	{% for page in pages %}
+
+<div class="downmenu"><form method="post" action="."><input type="text" value="{{ string }}" name="string" size="20"> <input type="submit" value="{% trans "Plain Search" %}" name="like">
+{% if google %}
+ <input type="submit" value="{% trans "Search This Site with Google" %}" name="google">
+{% endif %}
+</form></div>
+
+{% if pages %}
+	{% if google %}
+		{% for page in pages %}
+		<img src="/site_media/wiki/img/2.png"> <a href="{{ page.URL }}">{{ page.title }}</a><br>
+		{% endfor %}
+	{% else %}
+		{% for page in pages %}
 		<img src="/site_media/wiki/img/2.png"> <a href="/wiki/page/{{ page.slug }}/">{{ page.title }}</a> - {{ page.description }}<br>
-	{% endfor %}
+		{% endfor %}
 	{% endif %}
+{% endif %}
 {% endblock %}
