Removed ContentBBcode from MyghtyBoard, replaced [rk:source] with normal [code] tag

--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/wow/add_post.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/wow/add_post.html
@@ -35,7 +35,7 @@
 				<td colspan="2" class="postbody">
 <form method="post" action=".">
 
-<a onclick='document.getElementById("id_text").value=document.getElementById("id_text").value+"[rk:source lang=\"xml\"][/rk:source]"'><img src="/site_media/wiki/editor/code.png" title="{% trans "Code" %}" alt="{% trans "Code" %}" border="0"></a> 
+<a onclick='document.getElementById("id_text").value=document.getElementById("id_text").value+"[code][/code]"'><img src="/site_media/wiki/editor/code.png" title="{% trans "Code" %}" alt="{% trans "Code" %}" border="0"></a> 
 	<br>
 	<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':omg:' "><img src="/site_media/wiki/smilies/icon_eek.gif" border="0"></a> 
 	<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':nice:' "><img src="/site_media/wiki/smilies/icon_biggrin.gif" border="0"></a> 
