--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/CrystalClear/category_list.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/CrystalClear/category_list.html
@@ -26,7 +26,11 @@
 			<tr>
 				<td class="tcl">
 					<div class="intd">
-						<div class="icon"><div class="nosize"><!-- --></div></div>
+						{% if forum.is_redirect %}
+							<div style="float:left;"><img src="/site_media/myghtyboard/CrystalClear/stick.png" /></div>
+						{% else %}
+							<div class="icon"><div class="nosize"><!-- --></div></div>
+						{% endif %}
 						<div class="tclcon">
 						{% if forum.is_redirect %}
 							<h3><a href="{{ forum.forum_description }}">{{ forum.forum_name }}</a></h3>
@@ -37,9 +41,9 @@
 						</div>
 					</div>
 				</td>
-				<td class="tc2">{{ forum.forum_topics }}</td>
-				<td class="tc3">{{ forum.forum_topics }}</td>
-				<td class="tcr">{{ forum.forum_lastpost }}</td>
+				<td class="tc2">{% if forum.is_redirect %}-{% else %}{{ forum.forum_topics }}{% endif %}</td>
+				<td class="tc3">{% if forum.is_redirect %}-{% else %}{{ forum.forum_topics }}{% endif %}</td>
+				<td class="tcr">{% if forum.is_redirect %}-{% else %}{{ forum.forum_lastpost }}{% endif %}</td>
 			</tr>
 	{% endfor %}
 	
