--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/CrystalClear/post_list.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/CrystalClear/post_list.html
@@ -20,7 +20,7 @@
 </div>
 
 	{% for i in object_list %}
-	<div id="p1" class="blockpost rowodd firstpost">
+	<div class="blockpost rowodd firstpost">
 	<h2><span><a href="/forum/">{% trans "Forum Index" %}</a> >> <a href="/forum/forum/{{ forum_id }}/">{{ forum_name }}</a> >> <a href="/forum/topic/1/{{ topic_id }}">{{ topic }}</a></span></h2>
 	<div class="box">
 		<div class="inbox">
@@ -63,43 +63,43 @@
 	{% endfor %}
 	{% if perms.add_post %}
 		{% if opened %}
-		<p align="right"><a href="/forum/add_post/{{ topic_id }}/"><b>{% trans "Add Post" %}</b></a></p>
+		<p style="text-align:right;"><a href="/forum/add_post/{{ topic_id }}/"><b>{% trans "Add Post" %}</b></a></p>
 		{% endif %}
 	{% endif %}
 	
-	<center>
+	<div style="align:center;">
 	{% if has_previous %}
 		<a href="/forum/topic/{{ previous }}/{{ topic_id }}/"><b>{% trans "Previous Page" %}</b></a>
 	{% endif %}
 	{% if has_next %}
 		<a href="/forum/topic/{{ next }}/{{ topic_id }}/"><b>{% trans "Next Page" %}</b></a>
-	{% endif %}</center>
+	{% endif %}</div>
 
-	<p align="right">
+	<p style="text-align:right;">
 		{% if perms.add_topic %}
-			- {% trans "You can post new Topics" %}<br>
+			- {% trans "You can post new Topics" %}<br />
 		{% else %}
-			- {% trans "You can't post new Topics" %}<br>
+			- {% trans "You can't post new Topics" %}<br />
 		{% endif %}
 		{% if perms.add_post %}
 			{% if opened %}
-				- {% trans "You can post new Posts" %}<br>
+				- {% trans "You can post new Posts" %}<br />
 			{% else %}
-				- {% trans "You can't post new Posts" %}<br>
+				- {% trans "You can't post new Posts" %}<br />
 			{% endif %}
 		{% else %}
-			- {% trans "You can't post new Posts" %}<br>
+			- {% trans "You can't post new Posts" %}<br />
 		{% endif %}
 		{% if perms.is_staff %}
-			- {% trans "You can moderate this Topic" %}<br>
+			- {% trans "You can moderate this Topic" %}<br />
 		{% else %}
-			-  {% trans "You can't moderate this Topic" %}<br>
+			-  {% trans "You can't moderate this Topic" %}<br />
 		{% endif %}
 	</p>
 
 
-<script class="javascript" src="/site_media/cbc/syntax/Scripts/shCore.js"></script>
-<script class="javascript" src="/site_media/cbc/syntax/Scripts/shBrushXml.js"></script>
-<script class="javascript">dp.SyntaxHighlighter.HighlightAll('code');</script>
+<script type="text/javascript" src="/site_media/cbc/syntax/Scripts/shCore.js"></script>
+<script type="text/javascript" src="/site_media/cbc/syntax/Scripts/shBrushXml.js"></script>
+<script type="text/javascript">dp.SyntaxHighlighter.HighlightAll('code');</script>
 
 {% endblock %}
