--- a/trunk/diamandas/wiki/templates/wiki/indexPage.html
+++ b/trunk/diamandas/wiki/templates/wiki/indexPage.html
@@ -3,7 +3,7 @@
 {% extends "body.html" %}
 
 {% block upmenu %}
-<input type="button" value="{% trans "Add a Page" %}" onclick="location.assign('/wiki/add/');" /> <input type="button" value="{% trans "Edit Proposals" %}" onclick="location.assign('/wiki/proposals/');" />
+<input type="button" value="{% trans "Add a Page" %}" onclick="location.assign('/wiki/add/');" /> <input type="button" value="{% trans "Site Tasks" %}" onclick="location.assign('/wiki/task_list/1/');" />
 {% if not is_authenticated %}
 <input type="button" value="{% trans "Login or Register" %}" onclick="location.assign('/wiki/user/');" />
 {% else %}
@@ -18,7 +18,7 @@
 {% endif %}
 [<a onclick="window.print()"><b>{% trans "Print Page" %}</b></a>] | [<a href="/wiki/sitemap.xml">{% trans "sitemap.xml" %}</a>]<br>
 <input type="button" value="{% trans "Edit" %}" onclick="location.assign('/wiki/edit/{{ page.slug }}/');" /> <input type="button" value="{% trans "Page History" %}" onclick="location.assign('/wiki/history/{{ page.slug }}/');" /> 
-<input type="button" value="{% trans "Add a Page" %}" onclick="location.assign('/wiki/add/');" /> <input type="button" value="{% trans "Edit Proposals" %}" onclick="location.assign('/wiki/proposals/');" /><input type="button" value="{% trans "Search" %}" onclick="location.assign('/wiki/search/');" /><input type="button" value="{% trans "Sitemap" %}" onclick="location.assign('/wiki/sitelist/');" />{% endblock %}
+<input type="button" value="{% trans "Add a Page" %}" onclick="location.assign('/wiki/add/');" /> <input type="button" value="{% trans "Site Tasks and Edit Proposals" %}" onclick="location.assign('/wiki/task_list/1/');" /><input type="button" value="{% trans "Search" %}" onclick="location.assign('/wiki/search/');" /><input type="button" value="{% trans "Sitemap" %}" onclick="location.assign('/wiki/sitelist/');" />{% endblock %}
 
 {% block header %}
 <div class="pagetitle"><h1 class="header">{{ page.title }}</h1></div>
