more Task Manager code, better look and task comments

--- a/trunk/diamandas/wiki/templates/wiki/task_list.html
+++ b/trunk/diamandas/wiki/templates/wiki/task_list.html
@@ -5,10 +5,10 @@
 <div class="pagetitle"><h3 class="header">{% trans "Site Tasks" %}</h3></div><br />
 <table width="100%" class="historytable" cellspacing="0" cellpadding="0">
 	<thead><tr>
-		<th class="title" width="40%"><center><B>{% trans "Task Title" %}</B></center></th>
-		<th class="title"><center><B>{% trans "Task Status" %}</B></center></th>
-		<th width="250" class="title"><center><B>{% trans "Last Update" %}</B></center></th>
-		<th width="80" class="title"><center><B>{% trans "Progress" %}</B></center></th>
+		<th class="title"><center><B>{% trans "Task Title" %}</B></center></th>
+		<th class="title" width="150"><center><B>{% trans "Task Status" %}</B></center></th>
+		<th width="100" class="title"><center><B>{% trans "Last Update" %}</B></center></th>
+		<th width="100" class="title"><center><B>{% trans "Progress" %}</B></center></th>
 	</tr></thead>
 
 
@@ -35,10 +35,10 @@
 	<br />
 	<table width="100%" class="historytable" cellspacing="0" cellpadding="0">
 	<thead><tr>
-		<th class="title" width="40%"><center><B>{% trans "Page Title" %}</B></center></th>
-		<th class="title"><center><B>{% trans "Modified by" %}</B></center></th>
-		<th width="250" class="title"><center><B>{% trans "Date" %}</B></center></th>
-		<th width="80" class="title"><center><B>{% trans "Changes Summary" %}</B></center></th>
+		<th class="title"><center><B>{% trans "Page Title" %}</B></center></th>
+		<th class="title" width="100"><center><B>{% trans "Modified by" %}</B></center></th>
+		<th width="100" class="title"><center><B>{% trans "Date" %}</B></center></th>
+		<th width="200" class="title"><center><B>{% trans "Changes Summary" %}</B></center></th>
 	</tr></thead>
 	{% for page in proposals %}
 	<tr>
